cmake_minimum_required(VERSION 4.1)
project(FireworkAPI VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(FAPI_INCLUDE_DIR "include/firework_api")
set(FIREWORK_API_SOURCES
    # -------------------
    #      Headers
    # -------------------
    
    # -------------------
    #    Source files
    # -------------------
)

# add_library(FireworkAPI SHARED ${FIREWORK_API_SOURCES})
# target_include_directories(FireworkAPI
#     PUBLIC
#         "include"
#     PRIVATE
#         "include/firework_api"
# )
